--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-helmet": "^6.1.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
+    "styled-components": "^5.3.0",
     "webpack": "^5.38.1",
     "webpack-dev-server": "^3.11.2"
   }
